# speedmonitor

./: Cargo.toml  sample.csv
src/: config.rs  lib.rs  main.rs
src/models/: measurement.rs  mod.rs
