[package]
name = "speedmonitor"
version = "0.1.0"
authors = ["Brett Norris <b.norris@calendly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
influxdb = { version = "0.1.0", features = ["derive"] }
chrono = "0.4"
futures = "0.3.5"
tokio = "0.2.21"